...
    <string name="service">Service</string>
    <string name="afterevent">Afterevent</string>
    <string name="location">Location</string>

    <string-array name="afterevents">
        <item>Nothing</item>
        <item>Standby</item>
        <item>Deep Standby</item>
        <item>Automatic</item>
    </string-array>

    <string name="vps">VPS</string>
    <string name="vps_note">Requires VPS to be enabled in the receiver\'s VPS settings.</string>
...
    <string name="standard">Standard Layout (Full)</string>
    <string name="quickzap">QuickZap Layout (Simple)</string>
    <string name="no_epg_available">Currently there is no EPG-Information available for this channel!</string>
    <string name="movie_detail_pane_empty">Choose Info on a recording to see its details here</string>
    <string name="epg_detail_pane_empty">Choose an event to see its details here</string>
    <string name="ok">OK</string>
    <string name="activate">Activate</string>
    <string name="confirm_delete_profile">Do you really want to delete this profile?</string>
    <string name="profile_activated">Activated profile</string>
    <string name="profile_not_activated">Error activating profile</string>
    <string name="profile_deleted">Deleted profile</string>
    <string name="profile">Profile</string>
    <string name="auto_switch_profile_wifi_based">Auto Profile switch</string>
...
    <string name="tags">Tags</string>
    <string name="screenshot">Screenshot</string>
    <string name="host_empty">The host name cannot be empty!</string>
    <string name="standby">Standby</string>
    <string name="restart_gui">Restart GUI</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
    <string name="powercontrol">Power Control</string>
    <string name="choose_tags">Choose tags</string>
    <string name="bouquet_overview">Bouquet overview</string>
    <string name="set_default">Set as default</string>
    <string name="default_bouquet_set_to">Default bouquet has been set to: </string>
    <string name="default_bouquet_not_set">Default bouquet could not be set!</string>
...
